<resources>
    <string name="app_name">Community Cloud App</string>
    <string name="usernameTitle">Username: </string>
    <string name="passwordTitle">Password: </string>
    <string name="loginTitle">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginError">Login Error</string>
    <string name="authError">Username and Password combination not found in database</string>
    <string name="loginButtonText">Login</string>
    <string name="title_activity_main_alerts">MainAlertsActivity</string>
    <string name="logout">Log Out</string>
    <string name="title_events">Events</string>
    <string name="title_alerts">Send Alerts</string>
    <string name="title_manage">Manage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login_error_1">Username and password cannot be empty</string>
    <string name="login_error_2">Username cannot be empty</string>
    <string name="login_error_3">Password cannot be empty</string>

    <string name="action_example">Send Alert</string>
    <string name="title_activity_send_alert">sendAlert</string>
    <string name="alertTypeString">Alert Type:</string>
    <string name="alertDetailString">Details:</string>
    <string name="alertRatingString">Rating:</string>
    <string name="alertLocationString">Location:</string>
    <string name="alertSubmitString">Send</string>
</resources>
