<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/white">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_id"
        android:src="@drawable/commcloud"
        android:layout_centerHorizontal="true"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameTitle"
        android:text="@string/usernameTitle"
        android:layout_below="@id/logo_id"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameInput"
        android:layout_below="@+id/logo_id"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/usernameTitle"
        android:layout_marginBottom="10dp"
        android:singleLine="true"
        android:nextFocusForward="@id/usernameInput"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTitle"
        android:text="@string/passwordTitle"
        android:layout_below="@id/usernameInput"
        android:layout_toStartOf="@+id/passwordInput"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordInput"
        android:layout_below="@+id/usernameInput"
        android:layout_alignStart="@+id/usernameInput"
        android:password="true"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/errorTitleID"
        android:text="@string/loginError"
        android:textColor="@android:color/holo_red_light"
        android:layout_below="@id/passwordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_below="@id/errorTitleID"
        android:layout_centerHorizontal="true"
        android:text="@string/loginButtonText"
        android:onClick="loginFunction"
        />

    <ProgressBar
        android:id="@+id/activity_main_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_below="@id/loginButton"
        />

</RelativeLayout>
